--- a/html_css_homework_2/css/styles.css
+++ b/html_css_homework_2/css/styles.css
@@ -1,4 +1,4 @@
-body {
+.wrapper {
     width: 1280px;
     margin: 0 auto;
     font-family: sans-serif;
@@ -26,10 +26,11 @@ body {
 .website-navigation {
     display: inline-block;
     width: 100%;
+    /*margin: 50px auto;*/
     text-align: center;
     margin-bottom: 50px;
     background-color: darkslategray;
-    padding: 20px;
+    padding: 20px 0;
     font-size: 18px;
 }
 
@@ -62,16 +63,16 @@ body {
 
 .page-navigation a {
     color: #6e6e6e;
-    display: block;
-    padding: 10px 20px;
+    display: inline-block;
+    padding: 20px 20px;
     text-decoration: none;
 }
 
 .page-navigation a:hover, .page-navigation a:focus {
-    color: white;
+    color: black;
     display: block;
     background-color: #a7a7a9;
-    padding: 10px 40px;
+    padding: 20px 40px;
     text-decoration: none;
 }
 
@@ -79,31 +80,32 @@ body {
     display: inline-block;
     float: right;
     width: 77%;
+    /*width: 880px;*/
 }
 
 .content p {
     margin: 40px 20px;
 }
 
-.imageDiv {
+.page-image {
     border: 1px solid gray;
     width: 100%;
-    height: 400px;
+    height: 530px;
     overflow: hidden;
+    /*text-align: center;*/
     /*background: url("https://d2eip9sf3oo6c2.cloudfront.net/tags/images/000/000/943/full/ramda.png") no-repeat center;*/
     /*background-size: contain;*/
-    /*background-color: white;*/
 }
 
-.imageDiv img {
+.page-image img {
     width: 40%;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
+    /*margin: 0 auto;*/
+    /*display: block;*/
+    padding: 5% 30%;
     transition: transform .5s ease;
 }
 
-.imageDiv:hover img {
+.page-image:hover img {
     transform: scale(1.5)
 }
 
@@ -135,12 +137,12 @@ body {
 
 .second-page-navigation a {
     margin: 10px 40px;
-    color: white;
+    color: black;
     text-decoration: none;
 }
 
 .second-page-navigation a:focus, .second-page-navigation a:hover {
-    color: blue;
+    color: deepskyblue;
     text-decoration: underline;
 }
 
