Commited css_html_hw6_v1.0

--- a/html_css_homework_6/css/styles.css
+++ b/html_css_homework_6/css/styles.css
@@ -333,6 +333,7 @@
     text-align: center;
     text-transform: uppercase;
     color: #169cb4;
+    margin-bottom: 52px;
 }
 
 .grid-section-posts {
